2003-03-11  Michael Opdenacker <michaelo@gnu.org>

	* script.c: updated with patch from Martin Pitt <martin@piware.de>
	to ignore trailing spaces in lesson file lines.

2003-03-01  Felix Natter  <fnatter@gmx.net>

	* doc/gtypist.texi (Supplied lessons): update the section on kt*.typ

	* cursmenu.c (do_menu): handle PAGE UP/PAGE DOWN

2003-02-02  Felix Natter  <fnatter@gmx.net>

	* added/updated lessons: ttde.typ ktde.typ ktdk2.typ kten.typ
	ktfr2.typ ktnumber.typ ktdk.typ ktdvorak.typ ktfr.typ ktno.typ
	+ remove ktlecten.typ
	(from tipptrainer 0.4, kdeedu-3.1/ktouch)

	* lessons/gtypist.pm: generate M:

	* cursmenu.c (do_menu): run get_script_line

2003-01-13  Felix Natter  <fnatter@gmx.net>

	* split code into modules (script, curses-menu, error, main)
	+ hook up menu-code (do_menu, M: command)

2003-01-12  Felix Natter  <fnatter@gmx.net>

	* apply patch from Steven Elliott (elliott4@austin.rr.com):
	"I've attached a small patch that allows gtypist to display errors
	in reverse video instead of the reverse video '^' as it currently does"
	(option --show-errors)

2002-12-10  Michael Opdenacker <michaelo@gnu.org>

	* configure.in: removed intl/Makefile, po/Makefile and m4/Makefile
	from AC_OUTPUT because already added by gettextize (unavoidable).

2002-12-10  Michael Opdenacker <michaelo@gnu.org>

	* typefortune: several fixes from Stefan Troeger <stefan@troeger.st>:
	  improved 'fortune' detection and temporary file deletion.

2002-11-26  Michael Opdenacker <michaelo@gnu.org>

	* po/nl.po: new Dutch interface from J.M. Cogels <jcogels@chello.nl>

2002-10-28  Michael Opdenacker <michaelo@gnu.org>

	* configure.in: replaced 'dnl' by '#',
	removed duplicate entries in AC_OUTPUT.

2002-09-21  Felix Natter  <fnatter@gmx.net>

	* autogen.sh: exit if gawk isn't installed

2002-09-15  Felix Natter  <fnatter@gmx.net>

	* typefortune: allow (E)xit: have to add a *:END label
	and K:12:END at the beginning

2002-09-14  Felix Natter  <fnatter@gmx.net>
