@@ -1,3 +1,7 @@
+2003-03-31  Felix Natter  <fnatter@gmx.net>
+
+	* cursmenu.c (do_menu): parse UP=<LABEL> as the first thing in M:
+
 2003-03-11  Michael Opdenacker <michaelo@gnu.org>
 
 	* script.c: updated with patch from Martin Pitt <martin@piware.de>
